refactor: re-design MusicActivity

--- a/app/src/main/res/values-v23/themes.xml
+++ b/app/src/main/res/values-v23/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Base.Theme.Audire" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Audire" parent="Theme.Material3Expressive.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/transparent</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowLightStatusBar">true</item>
@@ -9,7 +9,7 @@
         <item name="colorAboutTileFg1">?attr/colorPrimaryContainer</item>
     </style>
 
-    <style name="Base.Theme.Audire.MaterialAlertDialog" parent="ThemeOverlay.Material3.MaterialAlertDialog.Centered">
+    <style name="Base.Theme.Audire.MaterialAlertDialog" parent="ThemeOverlay.Material3Expressive.MaterialAlertDialog.Centered">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="materialAlertDialogTitleTextStyle">@style/TextAppearance.Material3.HeadlineSmall</item>
